--- a/forms/referralslist.ui
+++ b/forms/referralslist.ui
@@ -29,7 +29,7 @@
     </widget>
    </item>
    <item row="0" column="0" colspan="2">
-    <widget class="QListView" name="listView"/>
+    <widget class="QTableView" name="tableView"/>
    </item>
   </layout>
  </widget>
